--- a/node-metric-collector/cronjob.yaml
+++ b/node-metric-collector/cronjob.yaml
@@ -4,7 +4,7 @@ metadata:
   name: node-metrics-cronjob
   namespace: monitoring
 spec:
-  schedule: "*/1 * * * *"
+  schedule: "*/1 * * * *"   # Run every minute
   jobTemplate:
     spec:
       template:
